--- a/html/test.html
+++ b/html/test.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meaningly</title>
+    <title>Meanify</title>
     <link rel="stylesheet" href="../css/popup.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-dark p-3" style="background-color: #191c24;">
         <div class="container-fluid">
             <a class="navbar-brand">
-                <h1>Meaningly</h1>
+                <h1>Meanify</h1>
             </a>
             <form class="d-flex">
                 <input class="form-control me-2" autocomplete="off" type="search" id="search" placeholder="Search" aria-label="Search">
