chrome.storage & option page functioning added

--- a/html/content.html
+++ b/html/content.html
@@ -22,7 +22,7 @@
                 <h1>Meanify</h1>
             </a>
             <form class="d-flex">
-                <input class="form-control me-2" autocomplete="off" type="search" id="search" placeholder="Search" aria-label="Search">
+                <input class="form-control me-2" autocomplete="off" type="search" id="search" placeholder="Search by word" aria-label="Search">
             </form>
         </div>
     </nav>
@@ -38,7 +38,7 @@
         </div>
         
     </div>
-    <script src="../js/popup.js"></script>
+    <script src="../js/content.js"></script>
 </body>
 
 </html>
