--- a/html/popup.html
+++ b/html/popup.html
@@ -6,18 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meanify</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-    <meta http-equiv="Content-Security-Policy" content="default-src gap://ready file://* *; style-src 'self' http://* https://* 'unsafe-inline'; script-src 'self' http://* https://* 'unsafe-inline' 'unsafe-eval'">
+    <link rel="stylesheet" href="../css/popup.css">
 </head>
 <body>
-    <div class="container">
-        <input type="text" class="form-control" id="wordinput">
+    <div class="container-popup">
+        <img src="../images/icon.png" alt="">
+        <a href="./content.html" target="_blank" class="button-54">Your Words</a>
     </div>
-    <a href="./test.html" target="_blank">link</a>
     <script src="../js/test.js"></script>
 </body>
 </html>
