audio on options_page & new icon added

--- a/html/popup.html
+++ b/html/popup.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <div class="container-popup">
-        <img src="../images/icon.png" alt="">
+        <img src="../images/icon1.png" alt="">
+        <p class="des">Select word then right click press meanify and get meanings easily, Also store them for later.</p>
         <a href="./content.html" target="_blank" class="button-54">Your Words</a>
     </div>
     <script src="../js/test.js"></script>
